https://guidewirejira.atlassian.net/browse/ISGOSU-141 - convert Gosu to compile exclusively with JDK 11 - update Gosu to compile with latest Manifold release - convert Gosudoc to work with a shaded release of legacy javadoc